# CppForNastenkaVariant3

./: CMakeLists.txt  everything.h  main.cpp  ВОПРОСЫ
Laba10/: Laba_10_1.cpp  Laba_10_2.cpp  Laba_10_3.cpp  Laba_10_4.cpp
Laba11/: Laba_11_1.cpp  Laba_11_2.cpp  Laba_11_3.cpp  Laba_11_4.cpp  Laba_11_5.cpp
Laba12/: Laba_12_1.cpp  Laba_12_2.cpp  Laba_12_3.cpp  Laba_12_4.cpp  a.txt  a1.txt  a2.txt  integers.txt  text.txt
Laba13/: Laba_13.cpp  people.txt
Laba14/: Laba_14.cpp  SinglyLinkedList.cpp
Laba15/: DoublyLinkedList.cpp  Laba_15.cpp
Laba16/: Laba_16_1.cpp  Laba_16_2.cpp  Queue.cpp  Stack.cpp
Laba2/: Laba_2_1.cpp  Laba_2_2.cpp  Laba_2_3.cpp  Laba_2_4.cpp
Laba3/: Laba_3_1.cpp  Laba_3_2.cpp  Laba_3_3.cpp  Laba_3_4.cpp
Laba4/: Laba_4_1.cpp  Laba_4_2.cpp  Laba_4_3.cpp  Laba_4_4.cpp
Laba5/: Laba_5_1.cpp  Laba_5_2.cpp  Laba_5_3.cpp  Laba_5_4.cpp
Laba6/: Laba_6_1.cpp  Laba_6_2.cpp  Laba_6_3.cpp  Laba_6_4.cpp  Laba_6_5.cpp
Laba7/: Laba_7.cpp
Laba8/: Laba_8_1.cpp  Laba_8_2.cpp  Laba_8_3.cpp  Laba_8_4.cpp  Laba_8_5.cpp
Laba9/: Laba_9_1.cpp  Laba_9_2.cpp  Laba_9_3.cpp  Laba_9_4.cpp  Laba_9_5.cpp
draft/: Laba_.cpp
