cmake_minimum_required(VERSION 3.20)
project(untitled)

set(CMAKE_CXX_STANDARD 14)


add_executable(Laba_2_1 Laba2/Laba_2_1.cpp)
add_executable(Laba_2_2 Laba2/Laba_2_2.cpp)
add_executable(Laba_2_3 Laba2/Laba_2_3.cpp)
add_executable(Laba_2_4 Laba2/Laba_2_4.cpp)

add_executable(Laba_3_1 Laba3/Laba_3_1.cpp)
add_executable(Laba_3_2 Laba3/Laba_3_2.cpp)
add_executable(Laba_3_3 Laba3/Laba_3_3.cpp)
add_executable(Laba_3_4 Laba3/Laba_3_4.cpp)

add_executable(Laba_4_1 Laba4/Laba_4_1.cpp)
add_executable(Laba_4_2 Laba4/Laba_4_2.cpp)
add_executable(Laba_4_3 Laba4/Laba_4_3.cpp)
add_executable(Laba_4_4 Laba4/Laba_4_4.cpp)

add_executable(Laba_5_1 Laba5/Laba_5_1.cpp)
add_executable(Laba_5_2 Laba5/Laba_5_2.cpp)
add_executable(Laba_5_3 Laba5/Laba_5_3.cpp)
add_executable(Laba_5_4 Laba5/Laba_5_4.cpp)

add_executable(Laba_6_1 Laba6/Laba_6_1.cpp)
add_executable(Laba_6_2 Laba6/Laba_6_2.cpp)
add_executable(Laba_6_3 Laba6/Laba_6_3.cpp)
add_executable(Laba_6_4 Laba6/Laba_6_4.cpp)
add_executable(Laba_6_5 Laba6/Laba_6_5.cpp)

add_executable(Laba_7 Laba7/Laba_7.cpp)

add_executable(Laba_8_1 Laba8/Laba_8_1.cpp)
add_executable(Laba_8_2 Laba8/Laba_8_2.cpp)
add_executable(Laba_8_3 Laba8/Laba_8_3.cpp)
add_executable(Laba_8_4 Laba8/Laba_8_4.cpp)
add_executable(Laba_8_5 Laba8/Laba_8_5.cpp)

add_executable(Laba_9_1 Laba9/Laba_9_1.cpp)
add_executable(Laba_9_2 Laba9/Laba_9_2.cpp)
add_executable(Laba_9_3 Laba9/Laba_9_3.cpp)
add_executable(Laba_9_4 Laba9/Laba_9_4.cpp)
add_executable(Laba_9_5 Laba9/Laba_9_5.cpp)

add_executable(Laba__10_1 Laba10/Laba_10_1.cpp)
add_executable(Laba__10_2 Laba10/Laba_10_2.cpp)
add_executable(Laba__10_3 Laba10/Laba_10_3.cpp)
add_executable(Laba__10_4 Laba10/Laba_10_4.cpp)

add_executable(Laba__11_1 Laba11/Laba_11_1.cpp)
add_executable(Laba__11_2 Laba11/Laba_11_2.cpp)
add_executable(Laba__11_3 Laba11/Laba_11_3.cpp)
add_executable(Laba__11_4 Laba11/Laba_11_4.cpp)
add_executable(Laba__11_5 Laba11/Laba_11_5.cpp)

add_executable(Laba__12_1 Laba12/Laba_12_1.cpp)
add_executable(Laba__12_2 Laba12/Laba_12_2.cpp)
add_executable(Laba__12_3 Laba12/Laba_12_3.cpp)
add_executable(Laba__12_4 Laba12/Laba_12_4.cpp)

add_executable(Laba__13 Laba13/Laba_13.cpp)

add_executable(Laba__14 Laba14/Laba_14.cpp)

add_executable(Laba__15 Laba15/Laba_15.cpp)

add_executable(Laba__16_1 Laba16/Laba_16_1.cpp)
add_executable(Laba__16_2 Laba16/Laba_16_2.cpp)

